Cleaned up spacing issues on home page and event card

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -13,11 +13,11 @@
  */
 @font-face {
   font-family: 'icomoon';
-  src:url('fonts/icomoon.eot?-1lhpac');
-  src:url('fonts/icomoon.eot?#iefix-1lhpac') format('embedded-opentype'),
-    url('fonts/icomoon.woff?-1lhpac') format('woff'),
-    url('fonts/icomoon.ttf?-1lhpac') format('truetype'),
-    url('fonts/icomoon.svg?-1lhpac#icomoon') format('svg');
+  src:url('/assets/fonts/icomoon.eot?-1lhpac');
+  src:url('/assets/fonts/icomoon.eot?#iefix-1lhpac') format('embedded-opentype'),
+    url('/assets/fonts/icomoon.woff?-1lhpac') format('woff'),
+    url('/assets/fonts/icomoon.ttf?-1lhpac') format('truetype'),
+    url('/assets/fonts/icomoon.svg?-1lhpac#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -47,8 +47,7 @@
 }
 
 
-/*general styles*/
-
+/* GENERAL STYLES */
 
 $active: #75dbc7;
 $activeText: #FFF;
@@ -60,21 +59,32 @@ h3, .h3, , h4, .h4, h5, .h5, .upvote-counter, .event-title, .event-upvotes {
   font-family:'Roboto Slab', Helvetica, sans-serif !important;
 }
 
-/* button styles */
+
+/* BUTTON STYLES */
 
 .navbar .btn-focus,
 .btn-focus {
   background: darken($active,10%);
   color: $activeText;
   border: 1px solid darken($active,10%);
+  &:hover {
+  background: darken($active,15%);
+  color:$activeText;
+  }
 }
 .navbar .btn-alt,
 .btn-alt {
   background: #EEE;
   border: 1px solid #EEE;
+  color:#666;
+  &:hover{
+  background:#e9e9e9;
+  }
 }
 
-/* navbar */
+
+/* NAVBAR */
+
 body .navbar {
   background-color: #fff;
   border: 1px solid #F0F0F0;
@@ -156,11 +166,7 @@ body .navbar {
 }
 
 
-/* home */
-
-#home-page {
-  margin-left: 50px;
-}
+/* HOME PAGE */
 
 .event-block {
   h3 {
@@ -187,12 +193,19 @@ body .navbar {
   }
 }
 
+#event-blocks-region {
+    padding-left:0px;
+    margin-left:-5px;
+}
+
 .navbar-nav .active a.add-new,
 .navbar-nav a.add-new {
-  border:1px solid #2F0CE8;
-  background: #2F0CE8;
-  color: #FFF;
+  border:1px solid #ccc;
+  color: #666;
   margin: 7px 0;
+  &:hover{
+  background:#fbfbfb;
+  }
 }
 
 .events {
@@ -266,7 +279,8 @@ body .navbar {
   margin: 0px auto;
 }
 
-/*sidebar*/
+
+/* SIDEBAR */
 
 .sidebar {
   margin-top:20px;
@@ -450,7 +464,7 @@ body .navbar {
   }
 
   .event-description-container {
-    margin-top:15px;
+    margin:15px 0px;
     .event-description {
       color:#666;
     }
@@ -458,11 +472,10 @@ body .navbar {
 
   .event-submitter {
     font-size: 12px;
-    color: grey;
+    color: #bbb;
   }
 
   .event-tools-container {
-    position: absolute;
     bottom: 0px;
 
     .event-upvotes {
